--- a/src/page/manage/index.scss
+++ b/src/page/manage/index.scss
@@ -5,7 +5,7 @@
   position: relative;
   > aside {
     box-sizing: border-box;
-    height: calc(100vh - 65px);
+    height: calc(100% - 65px);
     width: 75px;
     padding: 10px;
     position: fixed;
