--- a/src/page/manage/children/discover/index.scss
+++ b/src/page/manage/children/discover/index.scss
@@ -1,5 +1,5 @@
 @import '@/styles/theme';
-.work-platform-container {
+.discover-container {
   padding: 10px 5px;
   padding-right: 10px;
   > main {
@@ -16,11 +16,11 @@
         // box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
       }
     }
-    .work-platform-main-card-header {
-      .work-platform-main-header-left {
+    .discover-main-card-header {
+      .discover-main-header-left {
         width: 380px;
         position: relative;
-        .work-platform-visitor-update {
+        .discover-visitor-update {
           margin-bottom: 20px;
           padding: 0 5px;
           font-size: 14px;
@@ -38,9 +38,9 @@
           }
         }
       }
-      .work-platform-main-header-right {
+      .discover-main-header-right {
         flex: 1;
-        .work-platform-title {
+        .discover-title {
           font-size: 14px;
           margin-bottom: 20px;
           letter-spacing: 2px;
@@ -52,10 +52,10 @@
             -webkit-text-fill-color: transparent;
           }
         }
-        .work-platform-apps {
+        .discover-apps {
           display: flex;
           gap: 20px;
-          .work-platform-item {
+          .discover-item {
             cursor: pointer;
             display: flex;
             flex-direction: column;
@@ -76,7 +76,7 @@
               > i {
                 font-size: 35px;
               }
-              .work-platform-item-ai {
+              .discover-item-ai {
                 background-image: linear-gradient(
                   43deg,
                   #03ffd0 0%,
@@ -90,7 +90,7 @@
             > span {
               font-size: 12px;
             }
-            .work-platform-item-painting {
+            .discover-item-painting {
               background-image: url(../../../../assets/images/work-platform-painting.png);
               background-repeat: no-repeat;
               background-size: contain;
@@ -127,8 +127,8 @@
         }
       }
     }
-    .work-platform-main-middle {
-      .work-platform-middle-box {
+    .discover-main-middle {
+      .discover-middle-box {
         flex: 1;
         display: flex;
         // justify-content: space-between;
@@ -138,7 +138,7 @@
         }
       }
     }
-    .work-platform-main-bottom {
+    .discover-main-bottom {
       > div {
         flex: 1;
         // height: 400px;
@@ -149,7 +149,7 @@
           background-position: 100% 90%;
         }
       }
-      .work-platform-bottom-github {
+      .discover-bottom-github {
         min-height: 400px;
         flex-direction: column;
         background-image: -webkit-linear-gradient(
@@ -161,11 +161,11 @@
         .icon-github {
           font-size: 35px;
         }
-        .work-platform-bottom-title {
+        .discover-bottom-title {
           font-size: 18px;
           font-weight: 600;
         }
-        .work-platform-bottom-btn {
+        .discover-bottom-btn {
           cursor: pointer;
           background-color: $text-200;
           padding: 8px 10px;
@@ -190,28 +190,28 @@
 }
 
 // 黑暗模式
-.work-platform-container.dark-mode {
+.discover-container.dark-mode {
   > main {
     > section {
       > div {
         background-color: $text-600;
       }
     }
-    .work-platform-main-card-header {
-      .work-platform-main-header-left {
-        .work-platform-visitor-update {
+    .discover-main-card-header {
+      .discover-main-header-left {
+        .discover-visitor-update {
           .visitor-fire {
             background-image: linear-gradient(40deg, #ff0080, #ff8c00 70%);
           }
         }
       }
-      .work-platform-main-header-right {
-        .work-platform-apps {
-          .work-platform-item {
+      .discover-main-header-right {
+        .discover-apps {
+          .discover-item {
             > div {
               background-color: $text-400;
             }
-            .work-platform-item-painting {
+            .discover-item-painting {
               &::before {
                 background-color: rgba(
                   0,
