--- a/src/static/iconfont/iconfont.css
+++ b/src/static/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4291850 */
-  src: url('iconfont.woff2?t=1706781832979') format('woff2'),
-       url('iconfont.woff?t=1706781832979') format('woff'),
-       url('iconfont.ttf?t=1706781832979') format('truetype');
+  src: url('iconfont.woff2?t=1708238804780') format('woff2'),
+       url('iconfont.woff?t=1708238804780') format('woff'),
+       url('iconfont.ttf?t=1708238804780') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,38 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.mr-find:before {
+  content: "\e66b";
+}
+
+.mr-diqiu:before {
+  content: "\e684";
+}
+
+.mr-xingqiu:before {
+  content: "\e689";
+}
+
+.mr-zhishixingqiu:before {
+  content: "\e68a";
+}
+
+.mr-zhishixingqiu-xuanzhong:before {
+  content: "\e68b";
+}
+
+.mr-tansuo:before {
+  content: "\e690";
+}
+
+.mr-icon-xingqiu:before {
+  content: "\e6b5";
+}
+
+.mr-xinzeng:before {
+  content: "\e688";
 }
 
 .mr-stop:before {
@@ -155,10 +187,6 @@
 
 .mr-a-yuyinyinbo:before {
   content: "\e677";
-}
-
-.mr-chuangjianv:before {
-  content: "\e66b";
 }
 
 .mr-icons-air_element:before {
