--- a/src/page/manage/children/discover/index.scss
+++ b/src/page/manage/children/discover/index.scss
@@ -1,187 +1,80 @@
 @import '@/styles/theme';
 .discover-container {
   padding: 10px 5px;
-  padding-right: 10px;
-  > main {
-    > section {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 10px;
-      > div {
-        border-radius: 10px;
-        box-sizing: border-box;
-        padding: 10px;
-        background-color: $bg-100;
-        border: 1px solid $border-color-100;
-        // box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
-      }
+  // scroll-behavior: smooth; //平滑滚动
+  .wrapper {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(5, 1fr); // 默认显示5列
+    grid-auto-flow: column;
+    @media screen and (max-width: 1800px) {
+      grid-gap: 15px;
+      grid-template-columns: repeat(4, 1fr); // 在较小的屏幕下显示4列
     }
-    .discover-main-card-header {
-      .discover-main-header-left {
-        width: 380px;
-        position: relative;
-        .discover-visitor-update {
-          margin-bottom: 20px;
-          padding: 0 5px;
-          font-size: 14px;
-          letter-spacing: 2px;
-          > i {
-            font-size: 16px;
-            cursor: pointer;
-          }
-          .visitor-fire {
-            font-size: 16px;
-            margin-left: 2px;
-            background-color: #ff0080;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-          }
+    @media screen and (max-width: 1200px) {
+      grid-gap: 10px;
+      grid-template-columns: repeat(3, 1fr); // 在更小的屏幕下显示3列
+    }
+    @media screen and (max-width: 780px) {
+      grid-gap: 5px;
+      grid-template-columns: repeat(2, 1fr); // 在最小的屏幕下显示2列
+    }
+    .column {
+      display: inherit;
+      grid-gap: inherit;
+      grid-auto-rows: min-content;
+      .discover-list-item {
+        cursor: pointer;
+        background-color: #ffffff;
+        border-radius: 6px;
+        transition: box-shadow 0.2s;
+        &:hover {
+          box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+            0 2px 4px -1px rgba(0, 0, 0, 0.06);
         }
-      }
-      .discover-main-header-right {
-        flex: 1;
-        .discover-title {
-          font-size: 14px;
-          margin-bottom: 20px;
-          letter-spacing: 2px;
-          > i {
-            font-size: 16px;
-            margin-left: 4px;
-            background-image: linear-gradient(40deg, #ff0080, #ff8c00 70%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-          }
-        }
-        .discover-apps {
-          display: flex;
-          gap: 20px;
-          .discover-item {
-            cursor: pointer;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            > div {
-              width: 60px;
-              height: 60px;
-              background-color: $bg-100;
-              border-radius: 10px;
-              padding: 10px;
-              box-sizing: border-box;
-              margin-bottom: 5px;
-              box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05),
-                0 2px 1px 1px rgba(0, 0, 0, 0.05),
-                0 1px 1px 2px rgba(0, 0, 0, 0.05);
-
-              > i {
-                font-size: 35px;
-              }
-              .discover-item-ai {
-                background-image: linear-gradient(
-                  43deg,
-                  #03ffd0 0%,
-                  #c850c0 46%,
-                  #ffcc70 100%
-                );
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
-              }
+        .discover-list-item-img {
+          > img {
+            width: 100%;
+            max-height: 15vh;
+            object-fit: cover;
+            border-radius: 6px;
+            @media screen and (max-width: 1800px) {
+              max-height: 20vh;
             }
-            > span {
-              font-size: 12px;
+            @media screen and (max-width: 1200px) {
+              max-height: 25vh;
             }
-            .discover-item-painting {
-              background-image: url(../../../../assets/images/work-platform-painting.png);
-              background-repeat: no-repeat;
-              background-size: contain;
-              position: relative;
-              &::before {
-                content: '';
-                border-radius: 10px;
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                background-color: rgba(
-                  0,
-                  0,
-                  0,
-                  0.1
-                ); /* 添加半透明的黑色遮罩层 */
-              }
-              > i {
-                position: relative;
-                box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-                background-image: linear-gradient(
-                  43deg,
-                  #0086dc 0%,
-                  #ffcc70 46%,
-                  #fd4a9e 100%
-                );
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
-              }
+            @media screen and (max-width: 780px) {
+              max-height: 30vh;
             }
           }
         }
-      }
-    }
-    .discover-main-middle {
-      .discover-middle-box {
-        flex: 1;
-        display: flex;
-        // justify-content: space-between;
-        align-items: center;
-        > :first-child {
-          flex: 1;
-        }
-      }
-    }
-    .discover-main-bottom {
-      > div {
-        flex: 1;
-        // height: 400px;
-        &:first-child {
-          background-image: url(../../../../assets/images/work-platform-3d.png);
-          background-repeat: no-repeat;
-          background-size: contain;
-          background-position: 100% 90%;
-        }
-      }
-      .discover-bottom-github {
-        min-height: 400px;
-        flex-direction: column;
-        background-image: -webkit-linear-gradient(
-          144deg,
-          #9500ff,
-          $primary-500 80%,
-          #00ddeb
-        );
-        .icon-github {
-          font-size: 35px;
-        }
-        .discover-bottom-title {
-          font-size: 18px;
-          font-weight: 600;
-        }
-        .discover-bottom-btn {
-          cursor: pointer;
-          background-color: $text-200;
-          padding: 8px 10px;
-          border-radius: 8px;
-          width: 70%;
-          box-sizing: border-box;
-          text-align: center;
-          margin-top: 40px;
-          margin-bottom: 5px;
-          > i {
+        .discover-list-item-info {
+          padding: 10px;
+          font-size: 12px;
+          .discover-list-item-info-name {
             font-size: 14px;
-            color: $accent-400;
-            margin-right: 6%;
+            font-weight: 700;
           }
-          &:hover {
-            background-color: $text-400;
+          > p {
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+          }
+          .discover-list-item-info-bottom {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            .discover-list-head {
+              height: 25px;
+              border-radius: 50%;
+              margin-right: 5px;
+            }
+            .discover-list-star {
+              font-size: 12px;
+              margin-right: 3px;
+            }
           }
         }
       }
@@ -191,39 +84,4 @@
 
 // 黑暗模式
 .discover-container.dark-mode {
-  > main {
-    > section {
-      > div {
-        background-color: $text-600;
-      }
-    }
-    .discover-main-card-header {
-      .discover-main-header-left {
-        .discover-visitor-update {
-          .visitor-fire {
-            background-image: linear-gradient(40deg, #ff0080, #ff8c00 70%);
-          }
-        }
-      }
-      .discover-main-header-right {
-        .discover-apps {
-          .discover-item {
-            > div {
-              background-color: $text-400;
-            }
-            .discover-item-painting {
-              &::before {
-                background-color: rgba(
-                  0,
-                  0,
-                  0,
-                  0.2
-                ); /* 添加半透明的黑色遮罩层 */
-              }
-            }
-          }
-        }
-      }
-    }
-  }
 }
