--- a/src/page/manage/children/discover/index.scss
+++ b/src/page/manage/children/discover/index.scss
@@ -25,7 +25,7 @@
       grid-auto-rows: min-content;
       .discover-list-item {
         cursor: pointer;
-        background-color: #ffffff;
+        background-color: $bg-100;
         border-radius: 6px;
         transition: box-shadow 0.2s;
         &:hover {
@@ -84,4 +84,11 @@
 
 // 黑暗模式
 .discover-container.dark-mode {
+  .wrapper {
+    .column {
+      .discover-list-item {
+        background-color: $text-700;
+      }
+    }
+  }
 }
