--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -2,7 +2,7 @@ $text-100: #000000;
 $text-200: #191919;
 $text-300: #303136;
 $text-400: #2c2c2c;
-$text-500: #454545;
+$text-500: #777777;
 $text-600: #242424;
 $text-700: #2f2f2f;
 $text-800: #151717;
@@ -23,7 +23,7 @@ $primary-300: #af40ff;
 $primary-400: #fd4a9e;
 $primary-500: #00ddeb;
 $primary-600: #94cdf8;
-$primary-700: #94cdf8;
+// $primary-700: #94cdf8;
 $primary-800: #0093e9; //立方体颜色
 $primary-900: #94b5ff;
 $primary-1000: #e5f3ff;
