--- a/src/page/manage/index.scss
+++ b/src/page/manage/index.scss
@@ -168,6 +168,7 @@
       display: none;
     }
     .manage-mobile-menu-item {
+      width: 20%;
       height: 100%;
       opacity: 0.4;
       display: flex;
