--- a/src/page/manage/children/chat/children/chat-ctx/chat.scss
+++ b/src/page/manage/children/chat/children/chat-ctx/chat.scss
@@ -3,11 +3,11 @@
   width: 100%;
   height: 100%;
   position: relative;
-  .chat-select-btn {
-    position: absolute;
-    top: -49px;
-    right: 0;
-  }
+  // .chat-select-btn {
+  //   position: absolute;
+  //   top: -49px;
+  //   right: 0;
+  // }
   // 聊天
   main {
     scroll-behavior: smooth; //平滑滚动
@@ -173,7 +173,9 @@
         margin: 30px 0;
         border-radius: 10px;
         display: flex;
-
+        @media screen and (max-width: 768px) {
+          margin: 20px 0;
+        }
         > img {
           height: 30px;
           border-radius: 50%;
@@ -229,12 +231,15 @@
       height: 100%;
       display: flex;
       justify-content: center;
+      // align-items: end;
       align-items: center;
 
       .chat-empty-icon {
+        margin-top: 200px;
+
         > img {
           opacity: 0.1;
-          width: 40px;
+          width: 35px;
           filter: brightness(0);
           @media screen and (max-width: 768px) {
             width: 30px;
