feat(chat): 聊天页面完善

--- a/src/page/manage/children/chat/children/chat-ctx/chat.scss
+++ b/src/page/manage/children/chat/children/chat-ctx/chat.scss
@@ -249,7 +249,7 @@
     }
   }
   footer {
-    padding-top: 10px;
+    // padding-top: 10px;
     background-color: $bg-900;
     position: absolute;
     bottom: 0;
