--- a/src/page/manage/children/chat/index.scss
+++ b/src/page/manage/children/chat/index.scss
@@ -10,16 +10,25 @@
   @media screen and (max-width: 768px) {
     padding: 10px;
     padding-top: 0;
-    height: calc(100vh - 110px);
+    height: calc(100vh - 100px);
   }
   // 头部
   > header {
-    height: 55px;
-    padding: 0 10px;
+    position: relative;
+    height: 45px;
+    padding-right: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    .chat-header-role {
+      cursor: pointer;
+
+      padding: 5px 10px;
+      border-radius: 3px;
+      background-color: $bg-200;
+    }
   }
+
   // 侧边栏
   .chat-container-nav {
     position: fixed;
@@ -115,6 +124,53 @@
     }
   }
 }
+// 角色下拉
+.ant-popover .ant-popover-inner {
+  padding: 0px;
+}
+.chat-role-list {
+  width: 250px;
+  max-width: 60vw;
+  padding: 12px;
+  border-radius: 3px;
+  > div {
+    padding: 10px 0;
+    display: flex;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+    &:hover {
+      .chat-role-list-name {
+        background-image: linear-gradient(40deg, #ff0080, #ff8c00 70%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+      .chat-role-list-checked {
+        opacity: 1;
+      }
+    }
+    > img {
+      height: 25px;
+      width: 25px;
+      border-radius: 50%;
+      margin-right: 5px;
+    }
+    .chat-role-list-name {
+      max-width: 150px;
+    }
+    .chat-role-list-checked {
+      width: 12px;
+      height: 12px;
+      border: 2px solid $bg-800;
+      border-radius: 50%;
+      position: absolute;
+      right: 0;
+      opacity: 0;
+      transition: opacity 0.3s ease;
+    }
+  }
+}
+
 // 抽屉
 .chat-drawer-box {
   .chat-drawer-role-list {
@@ -128,6 +184,11 @@
 
 // 黑暗模式
 .chat-container-box.dark-mode {
+  > header {
+    .chat-header-role {
+      background-color: $text-700;
+    }
+  }
   .chat-container-nav {
     background-color: $text-700;
     header {
