--- a/src/layouts/auth/index.scss
+++ b/src/layouts/auth/index.scss
@@ -30,6 +30,8 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      max-width: 1300px;
+      margin: 0 auto;
       .mrk-logo {
         height: 25px;
         display: flex;
@@ -56,14 +58,57 @@
       }
     }
   }
+  .bg-box {
+    height: 600px;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0.1;
+    background-image: linear-gradient(to bottom, rgb(148, 153, 253), #ffffff);
+    &::after {
+      -webkit-backface-visibility: hidden;
+      -webkit-background-clip: content-box;
+      background-image: linear-gradient(90deg, #8b5cf6 1px, transparent 0),
+        linear-gradient(180deg, #8b5cf6 1px, transparent 0);
+      background-position: bottom;
+      background-size: 100px 50px;
+      bottom: 0;
+      content: '';
+      display: block;
+      height: 100%;
+      -webkit-mask-image: -webkit-gradient(
+        linear,
+        left 90%,
+        left top,
+        from(#000),
+        to(transparent)
+      );
+      mask-image: gradient(
+        linear,
+        left 90%,
+        left top,
+        from(#000),
+        to(transparent)
+      );
+      outline: 1px solid transparent;
+      padding: 1px;
+      right: 0;
+      transform: perspective(400px) rotateX(40deg) scaleX(2) translateZ(0);
+      transform-origin: bottom center;
+      will-change: transform;
+    }
+  }
   main {
     box-sizing: border-box;
     width: 100%;
     max-width: 1250px;
-    margin: 65px auto;
+    padding: 65px 0 30px 0;
+    margin: 0 auto;
+    position: relative;
     .rocket-box {
       position: relative;
-      padding: 160px 0 100px 0;
+      padding: 100px 0 100px 0;
       width: 100%;
       overflow: hidden;
       .rocket-bg {
@@ -90,14 +135,14 @@
       .rocket-container {
         display: flex;
         justify-content: center;
-        transform: translateZ(0); //触发 GPU 硬件加速
-        -webkit-transform: translateZ(0);
-        -moz-transform: translateZ(0);
-        -ms-transform: translateZ(0);
-        -o-transform: translateZ(0);
-        backface-visibility: hidden; //解决ios上内容闪动的问题
-        -webkit-backdrop-filter: blur(20px); //兼容设备
-        backdrop-filter: blur(20px);
+        // transform: translateZ(0); //触发 GPU 硬件加速
+        // -webkit-transform: translateZ(0);
+        // -moz-transform: translateZ(0);
+        // -ms-transform: translateZ(0);
+        // -o-transform: translateZ(0);
+        // backface-visibility: hidden; //解决ios上内容闪动的问题
+        // -webkit-backdrop-filter: blur(20px); //兼容设备
+        // backdrop-filter: blur(20px);
 
         section {
           width: 40%;
@@ -255,7 +300,7 @@
               // height: 500px;
               -webkit-touch-callout: none; /* 禁止长按弹出默认菜单 */
               user-select: none; /* 禁用选择文本 */
-              filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.5));
+              filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.2));
             }
           }
         }
@@ -303,6 +348,11 @@
         }
       }
     }
+    .rocket-introduce-title {
+      padding: 25px;
+      font-size: 25px;
+      text-align: center;
+    }
     .rocket-introduce {
       display: flex;
       flex-wrap: wrap;
@@ -336,6 +386,9 @@
             }
             .article-icon {
               transform: translateY(-20%);
+              > img {
+                height: 35px;
+              }
               > i {
                 font-size: 35px;
               }
@@ -347,6 +400,10 @@
           .article-icon {
             text-align: center;
             padding: 10px 0 15px 0;
+            > img {
+              height: 50px;
+              transition: all 0.1s;
+            }
             > i {
               font-size: 50px;
               transition: all 0.1s;
@@ -401,6 +458,9 @@
       }
     }
   }
+  .bg-box {
+    background-image: linear-gradient(to bottom, rgb(148, 153, 253), #191919);
+  }
   main {
     .rocket-box {
       .rocket-container {
@@ -433,6 +493,7 @@
         }
       }
     }
+
     .rocket-introduce {
       article {
         .article-container {
